Half page complete

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>Hello!<h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Udacity Portfolio Site</title>
+	<link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,600" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
+    <div class="main-body">
+      <h1 class="name">Keir Sweeney</h1>
+      <h3 class="job-title">Full Stack developer in progress</h3>
+      <hr>
+      <img class="hero-image" src="img/dev.jpg" alt="Developer"/>
+      <h2 class="featured-work">Featured Work</h2>
+    </div>
+  </div>
+</body>
+</html>
