--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Udacity Portfolio Site</title>
-	<link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,600" rel="stylesheet">
-</head>
-<body>
-  <div class="container">
-    <div class="main-body">
-      <h1 class="name">Keir Sweeney</h1>
-      <h3 class="job-title">Full Stack developer in progress</h3>
-      <hr>
-      <img class="hero-image" src="img/dev.jpg" alt="Developer"/>
-      <h2 class="featured-work">Featured Work</h2>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Udacity Portfolio Site</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,600" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div class="main-body">
+        <h1 class="name">Keir Sweeney</h1>
+        <h3 class="job-title">Full Stack developer in progress</h3>
+        <hr>
+        <img class="hero-image" src="img/dev.jpg" alt="Developer"/>
+        <h2 class="featured-work">Featured Work</h2>
+        <div class="features">
+          <div class="feature">
+            <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
+            <h2 class="feature-header">Inuit Carousel</h2>
+            <p class="feature-url"><a href=https://github.com/KeirSweeney/InuitCarousel>https://github.com/KeirSweeney/InuitCarousel</a></p>
+          </div>
+          <div class="feature">
+            <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
+            <h2 class="feature-header">Inuit Carousel</h2>
+            <p class="feature-url"><a href=https://github.com/KeirSweeney/InuitCarousel>https://github.com/KeirSweeney/InuitCarousel</a></p>
+          </div>
+          <div class="feature">
+            <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
+            <h2 class="feature-header">Inuit Carousel</h2>
+            <p class="feature-url"><a href=https://github.com/KeirSweeney/InuitCarousel>https://github.com/KeirSweeney/InuitCarousel</a></p>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
