--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="colors">
+        <div class="color1"></div>
+        <div class="color2"></div>
+        <div class="color3"></div>
+      </div>
       <div class="main-body">
         <h1 class="name">Keir Sweeney</h1>
         <h3 class="job-title">Full Stack developer in progress</h3>
