--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
     <title>Udacity Portfolio Site</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,600" rel="stylesheet">
+    <script src="https://use.fontawesome.com/3531440979.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="colors">
-        <div class="color1"></div>
-        <div class="color2"></div>
-        <div class="color3"></div>
+        <div class="color1">
+          <div class="color-text">
+            #02b3e4
+          </div>
+        </div>
+        <div class="color2">
+          <div class="color-text">
+            #2d3c49
+          </div>
+        </div>
+        <div class="color3">
+          <div class="color-text">
+            #7d97ad
+          </div>
+        </div>
       </div>
       <div class="main-body">
+        <i class="fa fa-coffee fa-5x" aria-hidden="true" id="coffee-icon"></i>
         <h1 class="name">Keir Sweeney</h1>
         <h3 class="job-title">Full Stack developer in progress</h3>
         <hr>
