--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="main-body">
-        <i class="fa fa-coffee fa-5x" aria-hidden="true" id="coffee-icon"></i>
+        <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
         <h1 class="name">Keir Sweeney</h1>
         <h3 class="job-title">Full Stack developer in progress</h3>
         <hr>
