--- a/index.html
+++ b/index.html
@@ -1,57 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Udacity Portfolio Site</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,600" rel="stylesheet">
     <script src="https://use.fontawesome.com/3531440979.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <div class="colors">
-        <div class="color1">
-          <div class="color-text">
-            #02b3e4
-          </div>
-        </div>
-        <div class="color2">
-          <div class="color-text">
-            #2d3c49
-          </div>
-        </div>
-        <div class="color3">
-          <div class="color-text">
-            #7d97ad
-          </div>
-        </div>
+    <div class="container-fluid">
+      <div class="colors col-md-3 col-xs-4">
+        <div class="color1"></div>
+        <div class="color2"></div>
+        <div class="color3"></div>
       </div>
-      <div class="main-body">
-        <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
-        <h1 class="name">Keir Sweeney</h1>
-        <h3 class="job-title">Full Stack developer in progress</h3>
+      <div class="main-body col-md-9 col-xs-12">
+        <header>
+          <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
+          <h1 class="name">Keir Sweeney</h1>
+          <h3 class="job-title">Full Stack developer</h3>
+        </header>
         <hr>
         <img class="hero-image" src="img/dev.jpg" alt="Developer"/>
         <h2 class="featured-work">Featured Work</h2>
-        <div class="features">
+        <section class="features">
           <div class="feature">
             <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
             <h2 class="feature-header">Inuit Carousel</h2>
-            <p class="feature-url"><a href=https://github.com/KeirSweeney/InuitCarousel>https://github.com/KeirSweeney/InuitCarousel</a></p>
+            <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
           </div>
           <div class="feature">
             <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
             <h2 class="feature-header">Inuit Carousel</h2>
-            <p class="feature-url"><a href=https://github.com/KeirSweeney/InuitCarousel>https://github.com/KeirSweeney/InuitCarousel</a></p>
+            <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
           </div>
           <div class="feature">
             <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
             <h2 class="feature-header">Inuit Carousel</h2>
-            <p class="feature-url"><a href=https://github.com/KeirSweeney/InuitCarousel>https://github.com/KeirSweeney/InuitCarousel</a></p>
+            <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
           </div>
         </div>
-      </div>
+      </section>
     </div>
   </body>
 </html>
