Mobile first, always ;)

--- a/index.html
+++ b/index.html
@@ -1,50 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Udacity Portfolio Site</title>
-    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,600" rel="stylesheet">
     <script src="https://use.fontawesome.com/3531440979.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container-fluid">
-      <div class="colors col-md-2 col-xs-2">
-        <div class="color1"></div>
-        <div class="color2"></div>
-        <div class="color3"></div>
-      </div>
-      <div class="main-body col-md-10 col-xs-12">
+      <section class="colors col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <div class="color1 col-xs-4"></div>
+        <div class="color2 col-xs-4"></div>
+        <div class="color3 col-xs-4"></div>
+      </section>
+      <main class="main-body col-xs-12 col-sm-10 col-md-10 col-lg-10">
         <header>
           <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
-          <h1 class="name">Keir Sweeney</h1>
-          <h3 class="job-title">Full Stack developer</h3>
+            <h1 class="name">Keir Sweeney</h1>
+            <h3 class="job-title">Full Stack developer</h3>
         </header>
         <hr>
-        <img class="hero-image" src="img/dev.jpg" alt="Developer"/>
-        <h2 class="featured-work">Featured Work</h2>
-        <section class="features">
-          <div class="feature">
-            <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
-            <h2 class="feature-header">Inuit Carousel</h2>
-            <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
-          </div>
-          <div class="feature">
-            <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
-            <h2 class="feature-header">Inuit Carousel</h2>
-            <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
-          </div>
-          <div class="feature">
-            <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
-            <h2 class="feature-header">Inuit Carousel</h2>
-            <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
-          </div>
-        </div>
-      </section>
+      </main>
     </div>
   </body>
 </html>
+
+
+<!--   <body>
+  <div class="container-fluid">
+    <div class="colors col-md-2 col-xs-2">
+      <div class="color1"></div>
+      <div class="color2"></div>
+      <div class="color3"></div>
+    </div>
+    <div class="main-body col-md-10 col-xs-12">
+      <header>
+        <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
+        <h1 class="name">Keir Sweeney</h1>
+        <h3 class="job-title">Full Stack developer</h3>
+      </header>
+      <hr>
+      <img class="hero-image" src="img/dev.jpg" alt="Developer"/>
+      <h2 class="featured-work">Featured Work</h2>
+      <section class="features">
+        <div class="feature">
+          <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
+          <h2 class="feature-header">Inuit Carousel</h2>
+          <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
+        </div>
+        <div class="feature">
+          <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
+          <h2 class="feature-header">Inuit Carousel</h2>
+          <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
+        </div>
+        <div class="feature">
+          <img class="feature-img" src="img/300x200.png" alt="Featured Work 1">
+          <h2 class="feature-header">Inuit Carousel</h2>
+          <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
+        </div>
+      </div>
+    </section>
+  </div>
+</body>
+</html> -->
