All content back in! Worst git commit messages i've ever done

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -23,18 +21,35 @@
         <div class="color3 col-xs-4"></div>
       </section>
       <main class="main-body col-xs-12 col-sm-10 col-md-10 col-lg-10">
-        <header>
-          <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
-            <h1 class="name">Keir Sweeney</h1>
-            <h3 class="job-title">Full Stack developer</h3>
-        </header>
-        <hr>
+      <header class="row">
+        <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
+        <h1 class="name">Keir Sweeney</h1>
+        <h3 class="job-title">Full Stack developer</h3>
+      </header>
+      <hr>
+      <img class="hero-image img-rounded img-responsive" src="img/dev.jpg" alt="Developer"/>
+      <h2 class="featured-work">Featured Work</h2>
+      <section class="features row">
+        <div class="feature col-xs-4">
+          <img class="feature-img img-rounded img-responsive" src="img/300x200.png" alt="Featured Work 1">
+          <h2 class="feature-header">Inuit Carousel</h2>
+          <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
+        </div>
+        <div class="feature col-xs-4">
+          <img class="feature-img img-rounded img-responsive" src="img/300x200.png" alt="Featured Work 1">
+          <h2 class="feature-header">Inuit Carousel</h2>
+          <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
+        </div>
+        <div class="feature col-xs-4">
+          <img class="feature-img img-rounded img-responsive" src="img/300x200.png" alt="Featured Work 1">
+          <h2 class="feature-header">Inuit Carousel</h2>
+          <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
+        </div>
+      </section>
       </main>
     </div>
   </body>
 </html>
-
-
 <!--   <body>
   <div class="container-fluid">
     <div class="colors col-md-2 col-xs-2">
