Why is allignment exciting me, what happened :(

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       </section>
       <main class="main-body col-xs-12 col-sm-10 col-md-10 col-lg-10">
       <header class="row">
-        <i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i>
-        <h1 class="name">Keir Sweeney</h1>
+        <h1 class="name">Keir Sweeney<i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i></h1>
         <h3 class="job-title">Full Stack developer</h3>
       </header>
       <hr>
