Align bottom div center on small devices

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="color3 col-xs-4"></div>
       </section>
       <main class="main-body col-xs-12 col-sm-10 col-md-10 col-lg-10">
-      <header class="row">
+      <header>
         <h1 class="name">Keir Sweeney<i class="fa fa-coffee" aria-hidden="true" id="coffee-icon"></i></h1>
         <h3 class="job-title">Full Stack developer</h3>
       </header>
@@ -29,17 +29,17 @@
       <img class="hero-image img-rounded img-responsive" src="img/dev.jpg" alt="Developer"/>
       <h2 class="featured-work">Featured Work</h2>
       <section class="features row">
-        <div class="feature col-xs-4">
+        <div class="feature col-xs-6 col-sm-4 col-md-4 col-lg-4">
           <img class="feature-img img-rounded img-responsive" src="img/300x200.png" alt="Featured Work 1">
           <h2 class="feature-header">Inuit Carousel</h2>
           <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
         </div>
-        <div class="feature col-xs-4">
+        <div class="feature col-xs-6 col-sm-4 col-md-4 col-lg-4">
           <img class="feature-img img-rounded img-responsive" src="img/300x200.png" alt="Featured Work 1">
           <h2 class="feature-header">Inuit Carousel</h2>
           <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
         </div>
-        <div class="feature col-xs-4">
+        <div class="feature col-xs-6 col-sm-4 col-md-4 col-lg-4">
           <img class="feature-img img-rounded img-responsive" src="img/300x200.png" alt="Featured Work 1">
           <h2 class="feature-header">Inuit Carousel</h2>
           <p class="feature-url"><a href="https://github.com/KeirSweeney/InuitCarousel">https://github.com/KeirSweeney/InuitCarousel</a></p>
